testdata/baselines/reference/compiler/fuzzRegressionIncompleteComment.errors.txt
fuzzRegressionIncompleteComment.ts(2,1): error TS1010: '*/' expected.


==== fuzzRegressionIncompleteComment.ts (1 errors) ====
    /*/
    
    
!!! error TS1010: '*/' expected.